refactor: Feed 단건조회 반환값 변경
- 이 부분 안드로이드랑 논의가 필요함

#822